# Ackerman_Steering_Sim

./: CMakeLists.txt  dynamics_fun.cpp  main  main.cpp  plot_state.py  state.txt  trajectory.txt
TVLQR Functions/: TVLQRgain_fun.cpp  controlLaw_fun.cpp  linearApprox_fun.cpp  trajectory_fun.cpp
